fix all'integrazione + modifica al canale comunicazione

--- a/src/main/resources/templates/accreditamento/accreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoFragment.html
@@ -660,7 +660,7 @@
 							<!--  TAB 3 -->
 							<div class="row">
 								<div class="col-xs-12">
-									<div th:if="${editabile}" th:text="#{label.info_inserimento_piano_formativo}" class="alert alert-info"></div>
+									<div th:if="${editabile and accreditamentoWrapper.accreditamento.isBozza() and accreditamentoWrapper.accreditamento.isProvvisorio()}" th:text="#{label.info_inserimento_piano_formativo}" class="alert alert-info"></div>
 									<div class="x_panel">
 										<div class="x_title">
 											<h2 th:text="#{label.allegati}">allegati</h2>
