--- a/src/main/resources/templates/comunicazione/comunicazioneShow.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneShow.html
@@ -42,6 +42,48 @@
 										</div>
 									</div>
 
+									<div class="mittente-response item form-group" th:classappend="${#fields.hasErrors('comunicazioneWrapper.risposta.destinatari')} ? 'bad'">
+										<div class="col-sm-2 col-xs-2 text-right">
+											<label class="control-label" th:text="#{label.to}"></label>
+										</div>
+										<div class="col-xs-12 col-sm-10">
+											<div class="fixed-value">
+												<th:block th:unless="${#authentication.principal.account.isSegreteria()}">
+													<span th:text="#{label.segreteria_ecm}"></span>
+													<span th:text="'&lt;' + #{label.segreteria_ecm_mail} + '&gt;'"></span>
+												</th:block>
+												<th:block th:if="${#authentication.principal.account.isSegreteria()}">
+													<th:block th:unless="${comunicazioneWrapper.comunicazione.mittente.isSegreteria()}">
+														<span th:text="${comunicazioneWrapper.comunicazione.mittente.getFullName()}"></span>
+														<span th:text="'&lt;' + ${comunicazioneWrapper.comunicazione.mittente.getEmail()} + '&gt;'"></span>
+													</th:block>
+													<th:block th:if="${comunicazioneWrapper.comunicazione.mittente.isSegreteria()}">
+														<th:block th:if="${#lists.size(comunicazioneWrapper.comunicazione.destinatari) == 1}">
+															<th:block th:each="destinatario, row : ${comunicazioneWrapper.comunicazione.destinatari}">
+																<span th:text="${destinatario.getFullName()}"></span>
+																<span th:text="'&lt;' + ${destinatario.getEmail()} + '&gt;'"></span>
+																<input type="hidden" th:value="${destinatario.id}" name="risposta.destinatari" />
+															</th:block>
+														</th:block>
+														<th:block th:unless="${#lists.size(comunicazioneWrapper.comunicazione.destinatari) == 1}">
+															<div class="col-xs-7 no-padding">
+																<select class="selectpicker" multiple="multiple"
+																	th:field="${comunicazioneWrapper.risposta.destinatari}"
+																	data-width="100%" data-style="btn-primary"
+																	data-size="10" data-hide-disabled="false" data-actions-box="true"
+																	title="Seleziona i destinatari della risposta...">
+																	<option th:each="destinatario, row : ${comunicazioneWrapper.comunicazione.destinatari}"
+																		th:text="${destinatario.getFullName()}"
+																		th:value="${destinatario.id}"></option>
+																</select>
+															</div>
+														</th:block>
+													</th:block>
+												</th:block>
+											</div>
+										</div>
+									</div>
+
 									<div class="mittente-response item form-group">
 										<div class="col-sm-2 col-xs-2 text-right">
 											<label class="control-label" th:text="#{label.oggetto}"></label>
@@ -57,7 +99,7 @@
 
 									<div class="response-content row">
 										<div class="col-xs-12 item comunicazioneAlert form-group" th:classappend="${#fields.hasErrors('comunicazioneWrapper.risposta.messaggio')} ? 'bad'">
-											<textarea class="response-testo" th:field="${comunicazioneWrapper.risposta.messaggio}"></textarea>
+											<textarea rows="8" class="response-testo" th:field="${comunicazioneWrapper.risposta.messaggio}"></textarea>
 											<div th:if="${#fields.hasErrors('comunicazioneWrapper.risposta.messaggio')}" class="alert" th:errors="${comunicazioneWrapper.risposta.messaggio}"></div>
 										</div>
 
@@ -122,7 +164,7 @@
 					<div class="x_content">
 						<div class="row">
 
-							<div class="view-response message-container"
+							<div class="view-response message-container" th:if="${#authentication.principal.account.isSegreteria() or #lists.contains(risposta.destinatari, #authentication.principal.account)}"
 								th:unless="${#sets.isEmpty(comunicazioneWrapper.comunicazione.risposte)}"
 								th:each="risposta, row : ${#lists.sort(comunicazioneWrapper.comunicazione.risposte, comunicazioneWrapper.responseComparator)}">
 
@@ -142,6 +184,31 @@
 												<strong>Da: </strong>
 												<span th:text="${risposta.mittente.isSegreteria()} ? #{label.segreteria_ecm} : ${risposta.mittente.getFullName()}"></span>
 												<span th:text="${risposta.mittente.isSegreteria()} ? '&lt;' + #{label.segreteria_ecm_mail} + '&gt;' : '&lt;' + ${risposta.mittente.email} + '&gt;'"></span>
+												<br/>
+												<th:block th:unless="${risposta.mittente.isSegreteria()}">
+													<strong>A: </strong>
+													<span th:text="#{label.segreteria_ecm}"></span>
+													<span th:text="'&lt;' + #{label.segreteria_ecm_mail} + '&gt;'"></span>
+												</th:block>
+												<th:block th:if="${risposta.mittente.isSegreteria()}">
+													<!--  un solo destinatario -->
+													<th:block th:if="${#lists.size(risposta.destinatari) == 1}">
+														<strong>A: </strong>
+														<span th:text="${risposta.destinatari[0].getFullName()}"></span>
+														<span th:text="'&lt;' + ${risposta.destinatari[0].email} + '&gt;'"></span>
+													</th:block>
+													<!--  destinatari multipli -->
+													<th:block th:if="${#lists.size(risposta.destinatari) gt 1}">
+														<strong th:text="#{label.to_provider_multipli}"></strong>
+														<a onclick="toggleDestinatariRisposta($(this))" class="sender-dropdown clickable"><i class="fa fa-chevron-down toggleIconRisposta"></i></a>
+														<div class="destinatari-risposta" style="display: none">
+															<div class="with-margin-left" th:each="destinatario, row : ${risposta.destinatari}">
+																<span th:text="${destinatario.getFullName()}"></span>
+																<span th:text="'&lt;' + ${destinatario.email} + '&gt;'"></span>
+															</div>
+														</div>
+													</th:block>
+												</th:block>
 											</div>
 										</div>
 									</div>
@@ -250,12 +317,23 @@
 						$("#response-modal").modal("show");
 					}
 
+					//init selecpicker
+				    $('select').selectpicker({
+						selectAllText : 'Seleziona tutti',
+						deselectAllText : 'Deseleziona tutti',
+						countSelectedText : '{0} selezionate'
+					});
+
 			    });
 
 				function toggleDestinatari() {
 					$(".destinatari").slideToggle();
-					$(".toggleIcon").toggleClass("fa-chevron-down");
-					$(".toggleIcon").toggleClass("fa-chevron-up");
+					$(".toggleIcon").toggleClass("fa-chevron-down fa-chevron-up");
+				}
+
+				function toggleDestinatariRisposta($elem) {
+					$elem.next().slideToggle();
+					$elem.find(".toggleIconRisposta").toggleClass("fa-chevron-down fa-chevron-up");
 				}
 
 			/*]]>*/
